配置文件添加maven模塊配置父節點路徑

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>z.z.w</groupId>
 		<artifactId>pro-module</artifactId>
 		<version>2015083110-SNAPSHOT</version>
+		<relativePath>../pro-module/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>pro-common</artifactId>
